--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,45 @@
 {
-	"name"       : "rarst/wps",
-	"description": "WordPress plugin for whoops error handler.",
-	"keywords"   : [
-		"wordpress",
-		"whoops",
-		"error"
-	],
-	"type"       : "wordpress-plugin",
-	"homepage"   : "https://github.com/Rarst/wps",
-	"license"    : "MIT",
-	"authors"    : [
-		{
-			"name"    : "Andrey Savchenko",
-			"email"   : "contact@rarst.net",
-			"homepage": "http://www.Rarst.net/"
-		}
-	],
-	"support"    : {
-		"issues": "https://github.com/Rarst/wps/issues"
-	},
-	"require"    : {
-		"php"                : ">=5.5.9",
-		"composer/installers": "~1.6",
-		"filp/whoops"        : "^2.3.1",
-		"pimple/pimple"      : "^3.2.3"
-	},
-	"autoload" : {
-		"classmap" : ["php/"]
-	}
+  "name": "rarst/wps",
+  "description": "WordPress plugin for whoops error handler.",
+  "keywords": [
+    "wordpress",
+    "whoops",
+    "error"
+  ],
+  "type": "wordpress-plugin",
+  "homepage": "https://github.com/Rarst/wps",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Andrey Savchenko",
+      "email": "contact@rarst.net",
+      "homepage": "http://www.Rarst.net/"
+    }
+  ],
+  "support": {
+    "issues": "https://github.com/Rarst/wps/issues"
+  },
+  "require": {
+    "php": ">=7.2.5|^8",
+    "composer/installers": "^2.2"
+  },
+  "require-dev": {
+    "filp/whoops": "^2.15.1",
+    "pimple/pimple": "^3.5"
+  },
+  "autoload": {
+    "classmap": [
+      "php/",
+      "vendor_prefixed/"
+    ]
+  },
+  "scripts": {
+    "prefix": "./tools/php-scoper add-prefix -f"
+  },
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true
+    },
+    "platform-check": false
+  }
 }
