--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,18 @@
   },
   "require": {
     "php": ">=7.2.5|^8",
-    "composer/installers": "^2.2"
+    "composer/installers": "^1.11 || ^2.0"
   },
   "require-dev": {
     "filp/whoops": "^2.15.1",
-    "pimple/pimple": "^3.5"
+    "pimple/pimple": "^3.5",
+    "symfony/var-dumper": "^6.0"
   },
   "autoload": {
+    "psr-4": {
+      "Rarst\\wps\\": "src/"
+    },
     "classmap": [
-      "php/",
       "vendor_prefixed/"
     ]
   },
@@ -39,6 +42,9 @@
   "config": {
     "allow-plugins": {
       "composer/installers": true
+    },
+    "platform": {
+      "php": "8.0.2"
     },
     "platform-check": false
   }
